--- a/styles.css
+++ b/styles.css
@@ -597,8 +597,8 @@ section {
 .screenshot-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 6rem;
-    align-items: center;
+    gap: 10rem;
+    align-items: flex-start;
 }
 
 .screenshot-container.reverse {
@@ -613,7 +613,7 @@ section {
     font-size: 2rem;
     font-weight: 300;
     margin-bottom: 1rem;
-    color: #f8fafc;
+    color: rgb(0, 200, 200);
     letter-spacing: -0.01em;
     line-height: 1.3;
 }
@@ -1025,6 +1025,15 @@ section {
 
     .contact-details {
         text-align: center;
+    }
+
+    .screenshot-container {
+        display: block;
+        align-items: flex-start;
+    }
+
+    .screenshot-container.reverse {
+        direction: ltr;
     }
 }
 
