--- a/styles.css
+++ b/styles.css
@@ -535,9 +535,9 @@ section {
 }
 
 .toolbar-image {
-    margin: 0 auto;
     display: flex;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .toolbar-image img {
@@ -555,17 +555,10 @@ section {
 }
 
 .toolbar-caption {
-    margin-top: 2.5rem;
-    align-self: top;
+    margin-top: 0;
     margin-left: 1rem;
-    font-size: 1rem;
-    color: #94a3b8;
+    align-self: flex-start;
     text-align: left;
-    line-height: 1.6;
-    font-weight: 300;
-    max-width: 500px;
-    margin-left: 1rem;
-    margin-right: auto;
 }
 
 .installation-placeholder {
@@ -1114,6 +1107,18 @@ section {
     .screenshot-info h3 {
         font-size: 1.5rem;
         margin-bottom: 1rem;
+    }
+    
+    .toolbar-image {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .toolbar-caption {
+        margin-left: 0;
+        margin-top: 1rem;
+        text-align: left;
+        align-self: flex-start;
     }
 }
 
